# equal-info-chunking

./: .gitignore  README.md  main.py  pyproject.toml
equal_info_chunking/: __init__.py  base.py  constants.py  entropy.py  gzip.py
equal_info_chunking/chunk/: __init__.py  base.py  constants.py  entropy.py  gzip.py  rand.py
equal_info_chunking/heuristic/: __init__.py
equal_info_chunking/metrics/: __init__.py  agreement.py
heuristic/: math_extract_steps.py
