[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "Arnav Komaragiri", email = "komaraac@mail.uc.edu"},
]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "transformers<5.0.0,>=4.46.0",
    "torch<3.0.0,>=2.5.0",
    "torchtyping<1.0.0,>=0.1.5",
    "bitsandbytes<1.0.0,>=0.44.1",
    "accelerate<2.0.0,>=1.1.1",
    "matplotlib<4.0.0,>=3.9.2",
]
name = "equal-info-chunking"
version = "0.1.0"
description = ""
readme = "README.md"
